# rq_vae_dev

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt
configs/: config.yaml  eval.yaml  train_decoder.yaml  train_rqvae.yaml
configs/eval/: default.yaml
configs/hydra/: default.yaml
configs/model/: rq_vae.yaml
configs/train/: default.yaml
scripts/: setup_environment.py
src/models/: decoder.py  rq_vae.py
tests/: test_data.py  test_model.py
