[tool.poetry]
name = "rq-vae-recommender"
version = "0.1.0"
description = "RQ-VAE for Recommender Systems"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchvision = "^0.13.0"
pytorch-lightning = "^1.8.0"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.1.0"
umpy = "^1.23.0"
pandas = "^1.4.0"
scipy = "^1.9.0"
scikit-learn = "^1.1.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.0.0"
flake8 = "^4.0.0"
isort = "^5.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)'''

[tool.isort]
line_length = 88
multi_line_output = 3
trailing_comma = True
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
py_version = 38
skip_glob = "*/.venv/*"

[tool.flake8]
max-line-length = 88
exclude = .git,__pycache__,.venv
ignore = E203,W503